# aspyre2D

./: CMakeLists.txt  main.cpp  todo.txt
game/: main.cpp
headers/: engine.h  scene.h
headers/actor-component-system/: actor.h  actor_system.h
headers/actor-component-system/component-systems/: animation_system.h  collision_system.h  physics_system.h  sprite_system.h  transform_system.h
headers/actor-component-system/component-systems/base/: component_system.h
headers/actor-component-system/components/: animation.h  body.h  collidable.h  sprite.h  transform.h
headers/low-level-systems/: input_emitter.h  input_poller.h  input_state.h  render_job.h  renderer.h  texture_renderer.h
headers/ui/: ui.h
headers/utilities/: debugger.h  sprite_sheet.h
headers/utilities/math/: vec2.h
headers/utilities/math/geometry/: intersection_data.h  line_segment.h  path_graph.h  polygon.h
sources/: engine.cpp  scene.cpp
sources/actor-component-system/: actor.cpp  actor_system.cpp
sources/actor-component-system/component-systems/: animation_system.cpp  collision_system.cpp  physics_system.cpp  sprite_system.cpp  transform_system.cpp
sources/low-level-systems/: input_emitter.cpp  input_poller.cpp  renderer.cpp  texture_renderer.cpp
sources/ui/: ui.cpp
sources/utilities/: debugger.cpp  sprite_sheet.cpp
sources/utilities/math/: vec2.cpp
sources/utilities/math/geometry/: line_segment.cpp  path_graph.cpp  polygon.cpp
tests/: CMakeLists.txt  actor_system_test.cpp  collision_system_test.cpp  component_system_test.cpp  engine_test.cpp  geometry_test.cpp  path_graph_test.cpp  sprite_sheet_test.cpp  vec2_test.cpp
